--- a/tip/tip.css
+++ b/tip/tip.css
@@ -16,5 +16,64 @@
 
 .cell{
     width: 20%;
-    height: 100%;
+    height: 100px;
+    float:left;
+    position: relative;
+    overflow: hidden;
 }
+
+.card{
+    width: 100%;
+    height: 100%;
+    left:0;
+    right:0;
+    bottom:0;
+    top:0;
+    position: absolute;
+    vertical-align: baseline;
+    transition: all 0.5s ease;
+}
+
+.current{
+    z-index:10;
+}
+
+.moving{
+    z-index: 5;
+}
+.wait{
+    z-index:1;
+}
+.table{
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    display: table;
+    height: 100%;
+    width: 100%;
+}
+
+.table-cell{
+    display: table-cell;
+    vertical-align: middle;
+    color: white;
+    word-break: normal;
+}
+
+.left{
+    left:100%;
+}
+
+.right{
+    left:-100%;
+}
+
+.top{
+    top:100%;
+}
+
+.bottom{
+    top:-100%;
+}
+
+
+
