--- a/tip/tip.css
+++ b/tip/tip.css
@@ -26,12 +26,11 @@
     width: 100%;
     height: 100%;
     left:0;
-    right:0;
     bottom:0;
     top:0;
     position: absolute;
     vertical-align: baseline;
-    transition: all 0.5s ease;
+    transition: left 1s ease,top 1s ease;
 }
 
 .current{
@@ -42,8 +41,9 @@
     z-index: 5;
 }
 .wait{
-    z-index:1;
+    z-index:2;
 }
+
 .table{
     padding-left: 0.5em;
     padding-right: 0.5em;
